# src/controllers/comments.js
@@ -3,13 +3,13 @@ const { CommentsService } = require('../services');
 class CommentsController {
   #commentsService = new CommentsService();
 
-  createCategory = (req, res) => this.#commentsService.createComment(req, res);
+  createComment = (req, res) => this.#commentsService.createComment(req, res);
 
-  updateCategory = (req, res) => this.#commentsService.updateComment(req, res);
+  updateComment = (req, res) => this.#commentsService.updateComment(req, res);
 
-  getCategories = (req, res) => this.#commentsService.getComments(req, res);
+  getComments = (req, res) => this.#commentsService.getComments(req, res);
 
-  deleteCategory = (req, res) => this.#commentsService.deleteComment(req, res);
+  deleteComment = (req, res) => this.#commentsService.deleteComment(req, res);
 }
 
 module.exports = CommentsController;
