# src/routers/comments.js
@@ -4,29 +4,29 @@ const {
   createCommentsPayloadValidator,
   updateCommentsPayloadValidator
 } = require('../middlewares/validators');
-// const { checkAuth, verifyRole } = require('../middlewares/auth');
+const { checkAuth, verifyRole } = require('../middlewares/auth');
 
 const commentsController = new CommentsController();
 commentsRouter.post(
   '/',
-  // checkAuth,
-  // verifyRole('User', Admin', 'Super admin'),
+  checkAuth,
+  verifyRole('User', 'Admin', 'Super admin'),
   createCommentsPayloadValidator,
-  commentsController.createCategory
+  commentsController.createComment
 );
 commentsRouter.put(
   '/:id',
-  // checkAuth,
-  // verifyRole('User', Admin', 'Super admin'),
+  checkAuth,
+  verifyRole('User', 'Admin', 'Super admin'),
   updateCommentsPayloadValidator,
-  commentsController.updateCategory
+  commentsController.updateComment
 );
-commentsRouter.get('/', commentsController.getCategories);
+commentsRouter.get('/', commentsController.getComments);
 commentsRouter.delete(
   '/:id',
-  // checkAuth,
-  // verifyRole('User', Admin', 'Super admin'),
-  commentsController.deleteCategory
+  checkAuth,
+  verifyRole('User', 'Admin', 'Super admin'),
+  commentsController.deleteComment
 );
 
 module.exports = commentsRouter;
